test/error/parse/ExpectDesignator.mod
MODULE ExpectDesignator;
BEGIN
  1 := 2;
END ExpectDesignator.
